# letter-banner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_color.py  image_mode.py  letter_only.py  outline_mode.py
letter_banner/: __init__.py  __main__.py  cli.py  core.py  decorations.py  fonts.py  images.py  palettes.py
tests/: test_cli.py  test_core.py  test_images.py
